--- a/package.json
+++ b/package.json
@@ -4,8 +4,30 @@
     "formik": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "name": "Money-Badger-front-end",
   "version": "1.0.0",
