--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^0.19.0",
     "create-react-app": "^3.2.0",
     "formik": "^2.0.6",
     "prop-types": "^15.7.2",
